Update event dates

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <div class="events-grid">
     <!-- Événement 1 -->
     <article class="event-card" tabindex="0" aria-labelledby="e1-title" aria-describedby="e1-desc">
-      <div class="event-date">01 Nov</div>
+      <div class="event-date">13 Dec</div>
       <h3 id="e1-title">Neon Techno Night</h3>
       <p id="e1-desc">Set exclusif de DJ Nova & Lightstorm — Ambiance 100% techno sous les lumières néon.</p>
       <div class="event-meta">
@@ -66,7 +66,7 @@
 
     <!-- Événement 2 -->
     <article class="event-card" tabindex="0" aria-labelledby="e2-title" aria-describedby="e2-desc">
-      <div class="event-date">02 Nov</div>
+      <div class="event-date">14 Dec</div>
       <h3 id="e2-title">Raw Vibes Party</h3>
       <p id="e2-desc">Deep house & techno progressive. Dress code : noir & lumière.</p>
       <div class="event-meta">
@@ -77,7 +77,7 @@
 
     <!-- Événement 3 -->
     <article class="event-card" tabindex="0" aria-labelledby="e3-title" aria-describedby="e3-desc">
-      <div class="event-date">07 Nov</div>
+      <div class="event-date">20 Dec</div>
       <h3 id="e3-title">Ladies on Decks</h3>
       <p id="e3-desc">Line-up 100% féminine : DJ Lya, Mëra et Kaï. Entrée gratuite avant 23h.</p>
       <div class="event-meta">
@@ -88,7 +88,7 @@
 
     <!-- Événement 4 -->
     <article class="event-card" tabindex="0" aria-labelledby="e4-title" aria-describedby="e4-desc">
-      <div class="event-date">8 Nov</div>
+      <div class="event-date">21 Dec</div>
       <h3 id="e4-title">Guest DJ : Axel Stone</h3>
       <p id="e4-desc">Invité international (Berlin) — sonorités underground et set de 4 heures.</p>
       <div class="event-meta">
@@ -99,7 +99,7 @@
 
     <!-- Événement 5 -->
     <article class="event-card" tabindex="0" aria-labelledby="e5-title" aria-describedby="e5-desc">
-      <div class="event-date">9 Nov</div>
+      <div class="event-date">3 Janv</div>
       <h3 id="e5-title">Electro glow session</h3>
       <p id="e5-desc">Expérience visuelle immersive avec projections lumineuses et mix live.</p>
       <div class="event-meta">
@@ -110,7 +110,7 @@
 
     <!-- Événement 6 -->
     <article class="event-card" tabindex="0" aria-labelledby="e6-title" aria-describedby="e6-desc">
-      <div class="event-date">15 Nov</div>
+      <div class="event-date">4 Janv</div>
       <h3 id="e6-title">Urban x Electro Night</h3>
       <p id="e6-desc">Fusion entre hip-hop, afrobeat et EDM. Performances danse et mix en direct.</p>
       <div class="event-meta">
@@ -121,7 +121,7 @@
 
     <!-- Événement 7 -->
     <article class="event-card" tabindex="0" aria-labelledby="e7-title" aria-describedby="e7-desc">
-      <div class="event-date">16 Nov</div>
+      <div class="event-date">17 Janv</div>
       <h3 id="e7-title">Retro Rave 2000's</h3>
       <p id="e7-desc">Revivez l'âge d'or des clubs avec les hits électro des années 2000.</p>
       <div class="event-meta">
@@ -132,7 +132,7 @@
 
     <!-- Événement 8 -->
     <article class="event-card" tabindex="0" aria-labelledby="e8-title" aria-describedby="e8-desc">
-      <div class="event-date">22 Nov</div>
+      <div class="event-date">18 Janv</div>
       <h3 id="e8-title">Tech house Fever</h3>
       <p id="e8-desc">House groovy, bass vibrantes et laser show.</p>
       <div class="event-meta">
@@ -143,7 +143,7 @@
 
     <!-- Événement 9 -->
     <article class="event-card" tabindex="0" aria-labelledby="e9-title" aria-describedby="e9-desc">
-      <div class="event-date">23 Nov</div>
+      <div class="event-date">31 Janv</div>
       <h3 id="e9-title">White néon Party</h3>
       <p id="e9-desc">Soirée full white : entrée offerte pour les 100 premiers habillés en blanc.</p>
       <div class="event-meta">
@@ -154,7 +154,7 @@
 
     <!-- Événement 10 -->
     <article class="event-card" tabindex="0" aria-labelledby="e10-title" aria-describedby="e10-desc">
-      <div class="event-date">28 Nov</div>
+      <div class="event-date">1 Fev</div>
       <h3 id="e10-title">Raw Experience Night</h3>
       <p id="e10-desc">Soirée immersive signature du club : musique, visuels, performances et scénographie unique.</p>
       <div class="event-meta">
